<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnNuevoEstudiante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="40dp"
        android:onClick="clickNuevoEstudiante"
        android:text="@string/btnNuevoEstudiante"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnLstEstudiantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:onClick="clickListaEstudiante"
        android:text="@string/btnLstEstudiantes"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnMisDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:onClick="clickMisDatos"
        android:text="@string/btnMisDatos"
        android:textSize="20sp" />

</LinearLayout>